--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -25,11 +25,33 @@
     footer {
         align-self: stretch;
 
-        &.empyt {
+        &.empyt .progress{
             opacity: 0.5;
         }
     }
 
+}
+
+.currentEpisode {
+    text-align: center;
+
+    img {
+        border-radius: 1.5rem;
+    }
+
+    strong {
+        display: block;
+        margin-top: 2rem;
+        font: 600 1.25rem Lexend, sans-serif;
+        line-height: 1.75rem;
+    }
+
+    span {
+        display: block;
+        margin-top: 1rem;
+        opacity: 0.6;
+        line-height: 1.5rem;
+    }
 }
 
 .emptyPlayer {
@@ -84,11 +106,27 @@
         border: 0;
         font-size: 0;
 
+        transition: filter 0.2s;
+
+        &:disabled {
+            cursor: default;
+            opacity: 0.5;
+        }
+
+        &:hover:not(:disabled) {
+            filter: brightness(0.7);
+        }
+
         &.playButton {
             width: 4rem;
             height: 4rem;
             border-radius: 1rem;
             background: var(--purple-400);
+
+
+            &:hover:not(:disabled) {
+                filter: brightness(0.95);
+            }
         }
     }
 }
